--- a/templates/user-side/index.html
+++ b/templates/user-side/index.html
@@ -135,8 +135,8 @@
 							<i class="zmdi zmdi-search"></i>
 						</div>
 
-						<div class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti js-show-cart" data-notify="">
-							<a href="{% url 'cart:shopping_cart' %}"><i class="zmdi zmdi-shopping-cart"></i></a>
+						<div class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti js-show-cart" data-notify="{{cart_count}}">
+							<a href="{% url 'cart:shopping_cart' %}"><i class="zmdi zmdi-shopping-cart" ></i></a>
 						</div>
 						
 						<a href="" class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti" data-notify="">
