--- a/templates/user-side/shoping-cart.html
+++ b/templates/user-side/shoping-cart.html
@@ -17,6 +17,14 @@
         <div class="col-lg-10 col-xl-7 m-lr-auto m-b-50">
             <div class="m-l-25 m-r--38 m-lr-0-xl">
                 <div class="wrap-table-shopping-cart">
+                    {% for message in messages %}
+                    <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                        {{ message }}
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    {% endfor %}
                     <table class="table-shopping-cart">
                         <tr class="table_head">
                             <th class="column-1">Product</th>
