--- a/templates/admin-side/addcategory.html
+++ b/templates/admin-side/addcategory.html
@@ -1,9 +1,7 @@
 {% extends 'admin-side/admindashboard.html' %}
 {% load static %}
 
-
 {% block title %}Category{% endblock title %}
-
 
 {% block content %}
 <div class="container">
@@ -18,7 +16,7 @@
                         {% csrf_token %}
                         <div class="d-flex flex-column align-items-center"> <!-- Center the form -->
                             <div class="mb-3">
-                                <label for="{{ form.name.id_for_label }}">Category Name</label>
+                                <label for="category_name">Category Name</label>
                                 <input type="text" class="form-control" id="category_name" name="category_name" >
                             </div>
 
@@ -30,7 +28,7 @@
                     </form>
                 </div>
             </div>
-        </div>
+        </div>  
     </div>
 </div>
 {% endblock %}
