--- a/templates/admin-side/addproduct.html
+++ b/templates/admin-side/addproduct.html
@@ -6,6 +6,13 @@
 <div class="container">
     <div class="row justify-content-center">
         <div class="col-lg-8">
+            {% if messages %}
+            <ul class="messages">
+                {% for message in messages %}
+                    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+                {% endfor %}
+            </ul>
+            {% endif %}
             <div class="card">
                 <div class="card-header">
                     <h3 class="card-title" style="margin-top: 70px;">Add Product</h3>
