--- a/templates/user-side/base-footer.html
+++ b/templates/user-side/base-footer.html
@@ -136,7 +136,7 @@
 					<div class="wrap-icon-header flex-w flex-r-m">
 
 						<div class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti js-show-cart" data-notify="">
-							<a href=""><i class="zmdi zmdi-shopping-cart"></i></a>
+							<a href="{% url 'cart:shopping_cart' %}"><i class="zmdi zmdi-shopping-cart" style="color: black"></i></a>
 						</div>
 						
 						<a href="" class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti" data-notify="">
@@ -161,7 +161,7 @@
 			<div class="wrap-icon-header flex-w flex-r-m">
 
 				<div class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti js-show-cart" data-notify="">
-					<a href=""><i class="zmdi zmdi-shopping-cart"></i></a>
+					<a href=""><i class="zmdi zmdi-shopping-cart">  </i></a>
 				</div>
 				
 				<a href="" class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti" data-notify="">
