--- a/templates/user-side/base-log-sign.html
+++ b/templates/user-side/base-log-sign.html
@@ -60,9 +60,19 @@
 								Help & FAQs
 							</a>
 	
-							<a href="{% url 'user_side:userlogin' %}" class="flex-c-m trans-04 p-lr-25">
-								Login/SignUp
-							</a>
+							{% if request.user.is_authenticated  %}    
+								<a href="{% url 'user_side:user_profile' %}" class="flex-c-m trans-04 p-lr-25">
+									 Profile: {{ request.user.username }}
+								</a>
+								<a href="{% url 'user_side:userlogout' %}" class="flex-c-m trans-04 p-lr-25">
+										Sign out
+								</a>
+							{% else %}
+								<a href="{% url 'user_side:userlogin' %}" class="flex-c-m trans-04 p-lr-25">
+										Login/Signup
+								</a>
+							{% endif %}
+							
 						</div>
 					</div>
 				</div>
