--- a/templates/user-side/edit_profile.html
+++ b/templates/user-side/edit_profile.html
@@ -11,12 +11,12 @@
     <form method="post">
       {% csrf_token %}
       <div class="form-group">
-        <label for="full_name">First Name</label>
-        <input type="text" class="form-control" id="full_name" name="first_name" value="{{ user_profile.name }}">
+        <label for="first_name">First Name</label>
+        <input type="text" class="form-control" id="first_name" name="first_name" value="{{ user_profile.name }}" required pattern="[A-Za-z]+" title="Please enter only alphabetic characters">
       </div>
       <div class="form-group">
-        <label for="full_name">Last Name</label>
-        <input type="text" class="form-control" id="full_name" name="last_name" value="{{ user_profile.name }}">
+        <label for="last_name">Last Name</label>
+        <input type="text" class="form-control" id="last_name" name="last_name" value="{{ user_profile.name }}" required pattern="[A-Za-z]+" title="Please enter only alphabetic characters">
       </div>
       <div class="form-group">
         <label for="username">Username</label>
@@ -24,7 +24,7 @@
       </div>
       <div class="form-group">
         <label for="mobile">Mobile</label>
-        <input type="text" class="form-control" id="mobile" name="mobile" value="{{ user_profile.mobile }}">
+        <input type="text" class="form-control" id="mobile" name="mobile" value="{{ user_profile.mobile }}" required pattern="[0-9]{10}" title="Please enter a valid 10-digit mobile number">
       </div>
       <button type="submit" class="btn btn-primary btn-block">Save Changes</button>
     </form>
