--- a/templates/user-side/order_history.html
+++ b/templates/user-side/order_history.html
@@ -1,10 +1,12 @@
-{% extends "user-side/base-log-sign.html" %}
+{% extends "user-side/base-footer.html" %}
 {% load static %}
 
 {% block content %}
 <div class="container" style="margin-top:100px;margin-bottom:350px">
   <h1>Order History</h1>
+  {% if all_orders %}
   <div class="table-responsive">
+    
     <table class="table table-hover">
       <thead>
         <tr>
@@ -40,7 +42,33 @@
         {% endfor %}
       </tbody>
     </table>
+    <div class="pagination">
+      <span class="step-links">
+        {% if orders.has_previous %}
+          <a href="?page=1">&laquo; first</a>
+          <a href="?page={{ orders.previous_page_number }}">previous</a>
+        {% endif %}
+
+        <span class="current">
+          Page {{ orders.number }} of {{ orders.paginator.num_pages }}.
+        </span>
+
+        {% if orders.has_next %}
+          <a href="?page={{ orders.next_page_number }}">next</a>
+          <a href="?page={{ orders.paginator.num_pages }}">last &raquo;</a>
+        {% endif %}
+      </span>
+    </div>
   </div>
+  {% else %}
+  <div  style="font-size: 40px;color:#333333;margin-top:10px;margin-bottom:10px;">
+    Its time to Upgrade your Wardrobe, Dive in!!
+
+    
+  </div>
+  <a href="{% url 'user_side:product_page' %}" class="btn btn-success"> Shop Here!!</a>
+  {% endif %}
+  
 </div>
 
 <!--===============================================================================================-->
