--- a/templates/user-side/product-detail.html
+++ b/templates/user-side/product-detail.html
@@ -59,7 +59,7 @@
 						<div class="size-204 respon6-n ext">
 							<div class="rs1-select2 bor8 bg0">
 									<select class="js-select2" name="size" required>
-											<option value="" disabled selected>Choose an option</option>
+											<option value="" disabled  selected>Choose an option</option>
 											{% for variant in products.productvariant_set.all %}
 													<option value="{{ variant.size }}">{{ variant.size | capfirst }}</option>
 											{% endfor %}
@@ -79,7 +79,7 @@
 						{% else %}
 							
 							<button class="flex-c-m stext-101 cl0 size-101 bg1 bor1 hov-btn1 p-lr-15 trans-04 " style="margin-left: -70px;" type="submit">Add To Cart</button>
-							<h1>{{ product_variants }}</h1>
+							
 						{% endif %}
 						
 						
@@ -128,4 +128,29 @@
 	</section>
 
 </form>
+
+<script>
+  filterForm.addEventListener('submit', function (event) {
+    event.preventDefault();
+    
+    const formData = new FormData(filterForm);
+    console.log(formData);
+    const params = new URLSearchParams(formData);
+
+    const currentUrl = new URL(window.location.href);
+
+    // Remove existing filter parameters
+    currentUrl.searchParams.forEach((value, key) => {
+        currentUrl.searchParams.delete(key);
+    });
+
+    // Append the new filter parameters
+   currentUrl.search = `${currentUrl.search ? currentUrl.search + '&' : ''}${params.toString()}`;
+
+
+    window.location.href = currentUrl.toString();
+});
+
+</script>
+
 {% endblock content %}
