--- a/templates/user-side/user-profile.html
+++ b/templates/user-side/user-profile.html
@@ -18,7 +18,7 @@
           <li class="list-group-item list-group-item-action" style="background-color: #2f2f2f;";"><a href="{% url 'user_side:address_page' %}">Address</a></li>
           <li class="list-group-item list-group-item-action" style="background-color: #2f2f2f;";"><a href="{% url 'user_side:change_password' %}">Change Password</a></li>
           <li class="list-group-item list-group-item-action" style="background-color: #2f2f2f;";"><a href=" {% url 'user_side:order_history' %}">My Orders</a></li>
-          <li class="list-group-item list-group-item-action" style="background-color: #2f2f2f;";"><a href=" ">Wallet</a></li>
+          <li class="list-group-item list-group-item-action" style="background-color: #2f2f2f;";"><a href="{% url 'wallet:wallet' %} ">Wallet</a></li>
           
         </ul>
       </div>
