--- a/templates/admin-side/categorylist.html
+++ b/templates/admin-side/categorylist.html
@@ -36,7 +36,7 @@
                             <td>{{ category.category_name }}</td>
                             <td>
                                 <a href="" class="btn btn-sm btn-primary">Edit</a>
-                                <form method="post" action="{% url 'category_side:delete-category' category.category_name %}" style="display: inline;">
+                                {% comment %} <form method="post" action="{% url 'category_side:delete-category' category.category_name %}" style="display: inline;"> {% endcomment %}
                                     {% csrf_token %}
                                     <button type="submit" class="btn btn-sm btn-danger" onclick="return confirm('Are you sure you want to delete this category?')">Delete</button>
                                 </form>
