--- a/templates/user-side/base-footer.html
+++ b/templates/user-side/base-footer.html
@@ -134,16 +134,19 @@
 
 					<!-- Icon header -->
 					<div class="wrap-icon-header flex-w flex-r-m">
-
-						<div class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti js-show-cart" data-notify="">
-							<a href="{% url 'cart:shopping_cart' %}"><i class="zmdi zmdi-shopping-cart" style="color: black"></i></a>
+				
+						<div class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti js-show-cart" data-notify = '{{ cart_count }}' style="display: inline-block; width: 50px;">
+								<a href="{% url 'cart:shopping_cart' %}">
+										<i class="zmdi zmdi-shopping-cart" style="color: black;"></i>
+								</a>
 						</div>
 						
-						<a href="" class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti" data-notify="">
-							<i class="zmdi zmdi-favorite-outline"></i>
-						</a>
-						
-					</div>
+						<div class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti" data-notify="{{ wishlist_count }}" style="display: inline-block; width: 50px;">
+								<a href="{% url 'wishlist:wishlist_page' %}">
+										<i class="zmdi zmdi-favorite-outline" style="color: black;"></i>
+								</a>
+						</div>
+				</div>
 				</nav>
 			</div>	
 		</div>
@@ -621,6 +624,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 <script src="{%static 'user/js/main.js'%} "></script>
 <!-- altertify -->
 
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
 </body>
 </html>
