--- a/templates/user-side/blu.html
+++ b/templates/user-side/blu.html
@@ -6,6 +6,16 @@
     {% csrf_token %}
     <!-- Product Detail -->
     <section class="sec-product-detail bg0 p-t-65 p-b-60">
+      <div style="text-align: center;">
+        {% if messages %}
+            <ul class="messages" style="list-style-type: none; padding: 0;">
+                {% for message in messages %}
+                    <li class="{{ message.tags }}" style="background-color: #ffcccc; color: red; padding: 10px; margin-bottom: 10px; border-radius: 5px;">{{ message }}</li>
+                {% endfor %}
+            </ul>
+        {% endif %}
+    </div>
+    
         <div class="container">
             <div class="row">
                 <div class="col-md-6 col-lg-7 p-b-30">
@@ -16,24 +26,22 @@
 
                             <div class="slick3 gallery-lb">
                                 {% for image in products.images.all %}
-                                <div class="item-slick3" data-thumb="{{ image.image.url }}">
-                                    <div class="wrap-pic-w pos-relative">
-                                        <img src="{{ image.image.url }}" alt="IMG-PRODUCT">
+                                    <div class="item-slick3" data-thumb="{{ image.image.url }}">
+                                        <div class="wrap-pic-w pos-relative">
+                                            <img src="{{ image.image.url }}" alt="IMG-PRODUCT">
 
-                                        <a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04"
-                                            href="{{ image.image.url }}">
-                                            <i class="fa fa-expand"></i>
-                                        </a>
+                                            <a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04"
+                                                href="{{ image.image.url }}">
+                                                <i class="fa fa-expand"></i>
+                                            </a>
+                                        </div>
                                     </div>
-                                </div>
                                 {% endfor %}
                             </div>
                         </div>
                     </div>
                 </div>
-                
 
-                
                 <div class="col-md-6 col-lg-5 p-b-30">
                     <div class="p-r-50 p-t-5 p-lr-0-lg">
                         <h4 class="mtext-105 cl2 js-name-detail p-b-14">
@@ -46,119 +54,119 @@
                         <p class="stext-102 cl3 p-t-23">
                             {{products.description}}
                         </p>
-                        
+
                         <!--  -->
-            <form action="{% url 'cart:add_cart' products.product_id %} " method="get">
-                <div class="p-t-33">
-                    <div class="flex-w flex-r-m p-b-10">
-                        <div class="size-203 flex-c-m respon6">
-                            Size
-                        </div>
+                        <form action="{% url 'cart:add_cart' products.product_id %}" method="get">
+                            <div class="p-t-33">
+                                <div class="flex-w flex-r-m p-b-10">
+                                    <div class="size-203 flex-c-m respon6">
+                                        Size
+                                    </div>
 
-                      
-                        <div class="size-204 respon6-n ext">
-                            <div class="rs1-select2 bor8 bg0">
-                                    <select class="js-select2" name="size" required>
-                                            <option value="" disabled  selected>Choose an option</option>
-                                            {% for variant in products.productvariant_set.all %}
+                                    <div class="size-204 respon6-n ext">
+                                        <div class="rs1-select2 bor8 bg0">
+                                            <select class="js-select2" name="size" required>
+                                                <option value="" disabled selected>Choose an option</option>
+                                                {% for variant in products.productvariant_set.all %}
                                                     <option value="{{ variant.size }}">{{ variant.size | capfirst }}</option>
-                                            {% endfor %}
-                                    </select>
-                                    <div class="dropDownSelect2"></div>
+                                                {% endfor %}
+                                            </select>
+                                            <div class="dropDownSelect2"></div>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                {% comment %} newly added {% endcomment %}
+
+                                {% csrf_token %}
+                                <div class="d-flex justify-content-center" id="button-container">
+                                    <button id="cart-button" class="flex-c-m stext-101 cl0 size-101 bg1 bor1 hov-btn1 p-lr-15 trans-04" style="margin-left: -70px;" type="submit">Add To Cart</button>
+                                    <!-- Span for displaying out of stock text -->
+                                    <span id="stock-status" class="ml-2 stock-status"></span>
+                                </div>
+
                             </div>
-                    </div>
-                    
-                    </div>                
 
-                    {% comment %} newly added {% endcomment %}
-              
-                    {% csrf_token %}
-                    <div class="d-flex justify-content-center" id="button-container">
-                        <button id="cart-button" class="flex-c-m stext-101 cl0 size-101 bg1 bor1 hov-btn1 p-lr-15 trans-04" style="margin-left: -70px;" type="submit">Add To Cart</button>
-                        <!-- Span for displaying out of stock text -->
-                        <span id="stock-status" class="ml-2 stock-status"></span>
-                    </div>
-                    
-                
-                    
-                    
-                </div>
+                            <!-- END -->
+                            <div class="flex-w flex-m p-l-100 p-t-40 respon7">
+                                <div class="flex-m bor9 p-r-10 m-r-11">
+                                    <a href="{% url 'wishlist:add_to_wishlist_product_detail' product_id=products.product_id %}" class="fs-14 cl3 hov-cl1 trans-04 lh-10 p-lr-5 p-tb-2 js-addwish-detail tooltip100" data-tooltip="Add to Wishlist">
+                                        <i class="zmdi zmdi-favorite"></i>
+                                    </a>
+                                </div>
 
-                
+                                <a href="#" class="fs-14 cl3 hov-cl1 trans-04 lh-10 p-lr-5 p-tb-2 m-r-8 tooltip100" data-tooltip="Facebook">
+                                    <i class="fa fa-facebook"></i>
+                                </a>
 
-                        <!-- END -->
-                        <div class="flex-w flex-m p-l-100 p-t-40 respon7">
-                            <div class="flex-m bor9 p-r-10 m-r-11">
-                                <a href="#" class="fs-14 cl3 hov-cl1 trans-04 lh-10 p-lr-5 p-tb-2 js-addwish-detail tooltip100" data-tooltip="Add to Wishlist">
-                                    <i class="zmdi zmdi-favorite"></i>
+                                <a href="#" class="fs-14 cl3 hov-cl1 trans-04 lh-10 p-lr-5 p-tb-2 m-r-8 tooltip100" data-tooltip="Twitter">
+                                    <i class="fa fa-twitter"></i>
+                                </a>
+
+                                <a href="#" class="fs-14 cl3 hov-cl1 trans-04 lh-10 p-lr-5 p-tb-2 m-r-8 tooltip100" data-tooltip="Google Plus">
+                                    <i class="fa fa-google-plus"></i>
                                 </a>
                             </div>
-
-                            <a href="#" class="fs-14 cl3 hov-cl1 trans-04 lh-10 p-lr-5 p-tb-2 m-r-8 tooltip100" data-tooltip="Facebook">
-                                <i class="fa fa-facebook"></i>
-                            </a>
-
-                            <a href="#" class="fs-14 cl3 hov-cl1 trans-04 lh-10 p-lr-5 p-tb-2 m-r-8 tooltip100" data-tooltip="Twitter">
-                                <i class="fa fa-twitter"></i>
-                            </a>
-
-                            <a href="#" class="fs-14 cl3 hov-cl1 trans-04 lh-10 p-lr-5 p-tb-2 m-r-8 tooltip100" data-tooltip="Google Plus">
-                                <i class="fa fa-google-plus"></i>
-                            </a>
                         </div>
                     </div>
                 </div>
-                
+
             </div>
 
         </form>
 
-            
 
-    <div class="bg6 flex-c-m flex-w size-302 m-t-73 p-tb-15">
+        <div class="bg6 flex-c-m flex-w size-302 m-t-73 p-tb-15">
 
-        <span class="stext-107 cl6 p-lr-25">
-            Categories: {{products.category}}
-        </span>
-    </div>
-</section>
+            <span class="stext-107 cl6 p-lr-25">
+                Categories: {{products.category}}
+            </span>
+        </div>
+    </section>
 
 
-<!-- Include jQuery library -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <!-- Include jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <!-- Include only one version of jQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
-<script>
-    $(document).ready(function() {
-        // Event listener for variant selection
-        $('select[name="size"]').change(function() {
-            var selectedVariant = $(this).val(); // Get the selected variant
-            $.ajax({
-                url: "{% url 'user_side:stock_check' %}",
-                type: "POST",
-                data: {
-                    'product': '{{ products.product_id }}',
-                    'variant': selectedVariant,
-                    'csrfmiddlewaretoken': '{{ csrf_token }}'
-                },
-                success: function(response) {
-                    console.log(response); // Debugging: Log the response to the console
-                    if (response.stock === 0 || response.stock === null) {
-                        // If stock is zero or null, change button text to "Out of Stock"
-                        $('#cart-button').hide();
-                        $('#stock-status').text('Out of Stock').show();
-                    } else {
-                        // If stock is not zero, change button text to "Add To Cart"
-                        $('#cart-button').show().text('Add To Cart');
-                        $('#stock-status').hide();
+
+    <script>
+        $(document).ready(function() {
+            // Event listener for variant selection
+            $('select[name="size"]').change(function() {
+                // Get the selected variant value
+                var selectedVariant = $(this).val();
+                
+                // AJAX request code
+                console.log("Size selection changed!"); // Log a message to console
+                $.ajax({
+                    url: "{% url 'user_side:stock_check' %}",
+                    type: "POST",
+                    data: {
+                        'product': '{{ products.product_id }}',
+                        'variant': selectedVariant,
+                        'csrfmiddlewaretoken': '{{ csrf_token }}'
+                    },
+                    success: function(response) {
+                        console.log(response);
+                        if (response.stock === 0 || response.stock === null) {
+                            $('#cart-button').hide(); // Hide the Add to Cart button
+                            $('#stock-status').text('Out of Stock').show(); // Show the Out of Stock message
+                        } else {
+                            $('#cart-button').show().text('Add To Cart'); // Show the Add to Cart button
+                            $('#stock-status').hide(); // Hide the Out of Stock message
+                        }
+                    },
+                    error: function(xhr, status, error) {
+                        console.log(xhr.responseText); // Debugging: Log any error messages to the console
                     }
-                },
-                error: function(xhr, status, error) {
-                    console.log(xhr.responseText); // Debugging: Log any error messages to the console
-                }
+                });
             });
         });
-    });
-</script>
-    
+        
+    </script>
+
 
 {% endblock content %}
