--- a/templates/user-side/order_history.html
+++ b/templates/user-side/order_history.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-<div class="container" style="margin-top:100px;margin-bottom:350px">
+<div class="container" style="margin-top:100px;margin-bottom:350px; color:black">
   <h1>Order History</h1>
   {% if all_orders %}
   <div class="table-responsive">
@@ -11,32 +11,76 @@
       <thead>
         <tr>
           <th scope="col">Order #</th>
-          <th scope="col">Product Details</th>
+          
           <th scope="col">Billing Name</th>
           <th scope="col">Phone</th>
+          <th scope="col">Address</th>
+          <th scope="col" style="width: 200px;">Product Name</th>
+          <th scope="col" >Quantity</th>
+    
           <th scope="col">Order Total</th>
           <th scope="col">Date</th>
+          <th scope="col">Payment Method</th>
           <th scope="col">Order Status</th>
+          <th scope="col">Product Details</th>
+          <th scope="col">Option</th>
         </tr>
       </thead>
       <tbody>
         {% for order in orders %}
         <tr>
           <th scope="row">{{ order.order_number }}</th>
-          <td><a href="{% url 'user_side:ordered_product_details' order_id=order.id %}">View Details</a></td>
+          
           <td>{{ order.full_name }}</td>
           <td>{{ order.phone }}</td>
+          <td>{{ order.address_line_1}}, {{order.city}}, {{order.state}}, {{order.country}}, {{order.pincode }}</td>
+          <td>
+            {% for order_product in order.orderproduct_set.all %}
+                {{ order_product.product.product_name }}
+                <br>
+            {% endfor %}
+        </td>
+        
+          <td>
+            {% for order_product in order.orderproduct_set.all %}
+              {{ order_product.quantity }} x {{ order_product.product.product_name }}
+              <br>
+              {% if order_product.size %}
+                Size: {{ order_product.size }}
+              {% endif %}
+              
+              {% if order_product.product_price %}
+                 &#x20B9;{{ order_product.product_price }}
+              {% endif %}
+              <br>
+              {% if order_product.variations.all %}
+                {% for variation in order_product.variations.all %}
+                  - {{ variation.name }}
+                {% endfor %}
+              {% endif %}
+              
+            {% endfor %}
+          </td>
+          
           <td>&#x20B9;{{ order.order_total }}</td>
           <td>{{ order.created_at }}</td>
+          <td>{{ order.payment.payment_method }}</td>
           <td>{{ order.status }}</td>
+          <td><a href="{% url 'user_side:ordered_product_details' order_id=order.id %}">View Details</a></td>
           <td>
             {% if order.status == 'Delivered' %}
-            <a href="{% url 'user_side:return_order' order_id=order.id %}" class="btn btn-warning" onclick="return confirm('Are you sure you want to return this order?')">Return</a>
+            <a href="{% url 'wallet:order_return' order_id=order.id %}" class="btn btn-warning" onclick="return confirm('Are you sure you want to return this order?')">Return</a>
             {% elif order.status != 'Returned' %}
             {% if order.status != 'Cancelled' %}
-            <a href="{% url 'user_side:return_order' order_id=order.id %}" class="btn btn-danger" onclick="return confirm('Are you sure you want to cancel this order?')">Cancel</a>
+            <a href="{% url 'wallet:cancel_order' order_id=order.id %}" class="btn btn-danger" onclick="return confirm('Are you sure you want to cancel this order?')">Cancel</a>
             {% endif %}
             {% endif %}
+          </td>
+          
+          <td>
+            <!-- Add a link to download the product invoice -->
+            
+            <a href="{% url 'user_side:download_invoice' order.id %}" class="btn btn-primary">Download Invoice</a>
           </td>
         </tr>
         {% endfor %}
