--- a/templates/user-side/product-detail.html
+++ b/templates/user-side/product-detail.html
@@ -2,155 +2,158 @@
 {% load static %}
 {% block title %}Products{% endblock title %}
 {% block content %}
-<form action="{% url 'cart:add_cart' products.product_id %} " method="get">
-	{% csrf_token %}
-	<!-- Product Detail -->
-	<section class="sec-product-detail bg0 p-t-65 p-b-60">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-6 col-lg-7 p-b-30">
-					<div class="p-l-25 p-r-30 p-lr-0-lg">
-						<div class="wrap-slick3 flex-sb flex-w">
-							<div class="wrap-slick3-dots"></div>
-							<div class="wrap-slick3-arrows flex-sb-m flex-w"></div>
 
-							<div class="slick3 gallery-lb">
-								{% for image in products.images.all %}
-								<div class="item-slick3" data-thumb="{{ image.image.url }}">
-									<div class="wrap-pic-w pos-relative">
-										<img src="{{ image.image.url }}" alt="IMG-PRODUCT">
-	
-										<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04"
-											href="{{ image.image.url }}">
-											<i class="fa fa-expand"></i>
-										</a>
-									</div>
-								</div>
-								{% endfor %}
-							</div>
-						</div>
-					</div>
-				</div>
-					
+    {% csrf_token %}
+    <!-- Product Detail -->
+    <section class="sec-product-detail bg0 p-t-65 p-b-60">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 col-lg-7 p-b-30">
+                    <div class="p-l-25 p-r-30 p-lr-0-lg">
+                        <div class="wrap-slick3 flex-sb flex-w">
+                            <div class="wrap-slick3-dots"></div>
+                            <div class="wrap-slick3-arrows flex-sb-m flex-w"></div>
 
-				
-				<div class="col-md-6 col-lg-5 p-b-30">
-					<div class="p-r-50 p-t-5 p-lr-0-lg">
-						<h4 class="mtext-105 cl2 js-name-detail p-b-14">
-							{{products.product_name}}
-						</h4>
+                            <div class="slick3 gallery-lb">
+                                {% for image in products.images.all %}
+                                    <div class="item-slick3" data-thumb="{{ image.image.url }}">
+                                        <div class="wrap-pic-w pos-relative">
+                                            <img src="{{ image.image.url }}" alt="IMG-PRODUCT">
 
-						<span class="mtext-106 cl2">
-							&#x20B9;{{products.price}}
-						</span>
-						<p class="stext-102 cl3 p-t-23">
-							{{products.description}}
-						</p>
-						
-						<!--  -->
-				<form action="" method="get">
-					{% csrf_token %}
-				<div class="p-t-33">
-					<div class="flex-w flex-r-m p-b-10">
-						<div class="size-203 flex-c-m respon6">
-							Size
-						</div>
+                                            <a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04"
+                                                href="{{ image.image.url }}">
+                                                <i class="fa fa-expand"></i>
+                                            </a>
+                                        </div>
+                                    </div>
+                                {% endfor %}
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
-						<div class="size-204 respon6-n ext">
-							<div class="rs1-select2 bor8 bg0">
-									<select class="js-select2" name="size" required>
-											<option value="" disabled  selected>Choose an option</option>
-											{% for variant in products.productvariant_set.all %}
-													<option value="{{ variant.size }}">{{ variant.size | capfirst }}</option>
-											{% endfor %}
-									</select>
-									<div class="dropDownSelect2"></div>
-							</div>
-					</div>
-					
-					</div>				
+                <div class="col-md-6 col-lg-5 p-b-30">
+                    <div class="p-r-50 p-t-5 p-lr-0-lg">
+                        <h4 class="mtext-105 cl2 js-name-detail p-b-14">
+                            {{products.product_name}}
+                        </h4>
 
-{% comment %} newly added {% endcomment %}
-					<div class="d-flex justify-content-center">
-						{% if products.productvariant.stock == 0 %}
-							<div class="text-danger">
-								<h5>Out of Stock</h5>
-							</div>
-						{% else %}
-							
-							<button class="flex-c-m stext-101 cl0 size-101 bg1 bor1 hov-btn1 p-lr-15 trans-04 " style="margin-left: -70px;" type="submit">Add To Cart</button>
-							
-						{% endif %}
-						
-						
-					</div>
-				
-					
-					
-					
-				</div>
+                        <span class="mtext-106 cl2">
+                            &#x20B9;{{products.price}}
+                        </span>
+                        <p class="stext-102 cl3 p-t-23">
+                            {{products.description}}
+                        </p>
 
-				</form>
+                        <!--  -->
+                        <form action="{% url 'cart:add_cart' products.product_id %}" method="get">
+                            <div class="p-t-33">
+                                <div class="flex-w flex-r-m p-b-10">
+                                    <div class="size-203 flex-c-m respon6">
+                                        Size
+                                    </div>
 
-						<!-- END -->
-						<div class="flex-w flex-m p-l-100 p-t-40 respon7">
-							<div class="flex-m bor9 p-r-10 m-r-11">
-								<a href="#" class="fs-14 cl3 hov-cl1 trans-04 lh-10 p-lr-5 p-tb-2 js-addwish-detail tooltip100" data-tooltip="Add to Wishlist">
-									<i class="zmdi zmdi-favorite"></i>
-								</a>
-							</div>
+                                    <div class="size-204 respon6-n ext">
+                                        <div class="rs1-select2 bor8 bg0">
+                                            <select class="js-select2" name="size" required>
+                                                <option value="" disabled selected>Choose an option</option>
+                                                {% for variant in products.productvariant_set.all %}
+                                                    <option value="{{ variant.size }}">{{ variant.size | capfirst }}</option>
+                                                {% endfor %}
+                                            </select>
+                                            <div class="dropDownSelect2"></div>
+                                        </div>
+                                    </div>
+                                </div>
 
-							<a href="#" class="fs-14 cl3 hov-cl1 trans-04 lh-10 p-lr-5 p-tb-2 m-r-8 tooltip100" data-tooltip="Facebook">
-								<i class="fa fa-facebook"></i>
-							</a>
+                                {% comment %} newly added {% endcomment %}
 
-							<a href="#" class="fs-14 cl3 hov-cl1 trans-04 lh-10 p-lr-5 p-tb-2 m-r-8 tooltip100" data-tooltip="Twitter">
-								<i class="fa fa-twitter"></i>
-							</a>
+                                {% csrf_token %}
+                                <div class="d-flex justify-content-center" id="button-container">
+                                    <button id="cart-button" class="flex-c-m stext-101 cl0 size-101 bg1 bor1 hov-btn1 p-lr-15 trans-04" style="margin-left: -70px;" type="submit">Add To Cart</button>
+                                    <!-- Span for displaying out of stock text -->
+                                    <span id="stock-status" class="ml-2 stock-status"></span>
+                                </div>
 
-							<a href="#" class="fs-14 cl3 hov-cl1 trans-04 lh-10 p-lr-5 p-tb-2 m-r-8 tooltip100" data-tooltip="Google Plus">
-								<i class="fa fa-google-plus"></i>
-							</a>
-						</div>
-					</div>
-				</div>
-				
-			</div>
+                            </div>
 
-			
+                            <!-- END -->
+                            <div class="flex-w flex-m p-l-100 p-t-40 respon7">
+                                <div class="flex-m bor9 p-r-10 m-r-11">
+                                    <a href="{% url 'wishlist:add_to_wishlist_product_detail' product_id=products.product_id %}" class="fs-14 cl3 hov-cl1 trans-04 lh-10 p-lr-5 p-tb-2 js-addwish-detail tooltip100" data-tooltip="Add to Wishlist">
+                                        <i class="zmdi zmdi-favorite"></i>
+                                    </a>
+                                </div>
 
-		<div class="bg6 flex-c-m flex-w size-302 m-t-73 p-tb-15">
+                                <a href="#" class="fs-14 cl3 hov-cl1 trans-04 lh-10 p-lr-5 p-tb-2 m-r-8 tooltip100" data-tooltip="Facebook">
+                                    <i class="fa fa-facebook"></i>
+                                </a>
 
-			<span class="stext-107 cl6 p-lr-25">
-				Categories: {{products.category}}
-			</span>
-		</div>
-	</section>
+                                <a href="#" class="fs-14 cl3 hov-cl1 trans-04 lh-10 p-lr-5 p-tb-2 m-r-8 tooltip100" data-tooltip="Twitter">
+                                    <i class="fa fa-twitter"></i>
+                                </a>
 
-</form>
+                                <a href="#" class="fs-14 cl3 hov-cl1 trans-04 lh-10 p-lr-5 p-tb-2 m-r-8 tooltip100" data-tooltip="Google Plus">
+                                    <i class="fa fa-google-plus"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
-<script>
-  filterForm.addEventListener('submit', function (event) {
-    event.preventDefault();
-    
-    const formData = new FormData(filterForm);
-    console.log(formData);
-    const params = new URLSearchParams(formData);
+            </div>
 
-    const currentUrl = new URL(window.location.href);
-
-    // Remove existing filter parameters
-    currentUrl.searchParams.forEach((value, key) => {
-        currentUrl.searchParams.delete(key);
-    });
-
-    // Append the new filter parameters
-   currentUrl.search = `${currentUrl.search ? currentUrl.search + '&' : ''}${params.toString()}`;
+        </form>
 
 
-    window.location.href = currentUrl.toString();
-});
+        <div class="bg6 flex-c-m flex-w size-302 m-t-73 p-tb-15">
 
-</script>
+            <span class="stext-107 cl6 p-lr-25">
+                Categories: {{products.category}}
+            </span>
+        </div>
+    </section>
+
+
+    <!-- Include jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+    <script>
+        $(document).ready(function() {
+            // Event listener for variant selection
+            $('select[name="size"]').change(function() {
+                // Get the selected variant value
+                var selectedVariant = $(this).val();
+                
+                // AJAX request code
+                console.log("Size selection changed!"); // Log a message to console
+                $.ajax({
+                    url: "{% url 'user_side:stock_check' %}",
+                    type: "POST",
+                    data: {
+                        'product': '{{ products.product_id }}',
+                        'variant': selectedVariant,
+                        'csrfmiddlewaretoken': '{{ csrf_token }}'
+                    },
+                    success: function(response) {
+                        console.log(response);
+                        if (response.stock === 0 || response.stock === null) {
+                            $('#cart-button').hide(); // Hide the Add to Cart button
+                            $('#stock-status').text('Out of Stock').show(); // Show the Out of Stock message
+                        } else {
+                            $('#cart-button').show().text('Add To Cart'); // Show the Add to Cart button
+                            $('#stock-status').hide(); // Hide the Out of Stock message
+                        }
+                    },
+                    error: function(xhr, status, error) {
+                        console.log(xhr.responseText); // Debugging: Log any error messages to the console
+                    }
+                });
+            });
+        });
+        
+    </script>
+
 
 {% endblock content %}
