--- a/templates/user-side/product.html
+++ b/templates/user-side/product.html
@@ -107,19 +107,20 @@
             </script>
 
             <!-- Filter -->
+            <form method="GET" action="{% url 'user_side:product_page' %}"></form>
             <div class="dis-none panel-filter w-full p-t-10">
                 <div class="wrap-filter flex-w bg6 w-full p-lr-40 p-t-27 p-lr-15-sm">
                     <div class="filter-col1 p-r-15 p-b-27">
                         <div class="mtext-102 cl2 p-b-15">
-                            CATEGORY
+                            Sort
                         </div>
 
                         <ul>
 
-                            {% for subcategory in subcategory_data %}
+                            {% for subcategory in category_slug %}
                             <li class="p-b-6">
-                                <a href="{% url 'user_side:filtered_products_by_category' category_slug=subcategory.name|slugify %}" class="filter-link stext-106 trans-04">
-                                    {{ subcategory.name }}
+                                <a href="{% url 'user_side:product_page' %}?category_slug={{ subcategory.category_name|slugify }}" class="filter-link stext-106 trans-04">
+                                    {{ subcategory.category_name }}
                                 </a>
                             </li>
                             {% endfor %}
@@ -127,28 +128,33 @@
 
 
                             <li class="p-b-6">
-                                <a href="{% url 'user_side:sort_product' sort_by='low_to_high' %}" class="filter-link stext-106 trans-04">
-                                    Price: Low to High
-                                </a>
+                                <label class="container">Price: Low to High
+                                    <input type="checkbox" name="sort_by" value="low_to_high">
+                                    <span class="checkmark"></span>
+                                </label>
+                            </li>
+
+                            
+
+                            <li class="p-b-6">
+                                <label class="container">Price: High to Low
+                                    <input type="checkbox" name="sort_by" value="high_to_low">
+                                    <span class="checkmark"></span>
+                                </label>
                             </li>
 
                             <li class="p-b-6">
-                                <a href="{% url 'user_side:sort_product' sort_by='high_to_low' %}" class="filter-link stext-106 trans-04">
-                                    Price: High to Low
-                                </a>
-                            </li>
-                            <li class="p-b-6">
-                                <a href="{% url 'user_side:sort_product' sort_by='new_arrivals' %}" class="filter-link stext-106 trans-04">
+                                <a href="{% url 'user_side:product_page' %}?sort_by=new_arrivals" class="filter-link stext-106 trans-04">
                                     New Arrivals
                                 </a>
                             </li>
                             <li class="p-b-6">
-                                <a href="{% url 'user_side:sort_product' sort_by='aA_to_zZ' %}" class="filter-link stext-106 trans-04">
+                                <a href="{% url 'user_side:product_page' %}?sort_by=aA_to_zZ" class="filter-link stext-106 trans-04">
                                     aA to zZ
                                 </a>
                             </li>
                             <li class="p-b-6">
-                                <a href="{% url 'user_side:sort_product' sort_by='zZ_to_aA' %}" class="filter-link stext-106 trans-04">
+                                <a href="{% url 'user_side:product_page' %}?sort_by=zZ_to_aA" class="filter-link stext-106 trans-04">
                                     zZ to aA
                                 </a>
                             </li>
@@ -168,36 +174,36 @@
                             </li>
 
                             <li class="p-b-6">
-                                <a href="{% url 'user_side:filtered_products_by_price'  price_range='500-1000' %}" class="filter-link stext-106 trans-04">
+                                <a href="{% url 'user_side:product_page' %}?price_range=500-1000" class="filter-link stext-106 trans-04">
                                     &#x20B9;500.00 - &#x20B9;1000.00
                                 </a>
                             </li>
                             <li class="p-b-6">
-                                <a href="{% url 'user_side:filtered_products_by_price'  price_range='1000-1500' %}" class="filter-link stext-106 trans-04">
+                                <a href="{% url 'user_side:product_page' %}?price_range=1000-1500" class="filter-link stext-106 trans-04">
                                     &#x20B9;1000.00 - &#x20B9;1500.00
                                 </a>
                             </li>
 
                             <li class="p-b-6">
-                                <a href="{% url 'user_side:filtered_products_by_price'  price_range='1500-2000' %}" class="filter-link stext-106 trans-04">
+                                <a href="{% url 'user_side:product_page' %}?price_range=1500-2000" class="filter-link stext-106 trans-04">
                                     &#x20B9;1500.00 - &#x20B9;2000.00
                                 </a>
                             </li>
 
                             <li class="p-b-6">
-                                <a href="{% url 'user_side:filtered_products_by_price'  price_range='2000-2500' %}" class="filter-link stext-106 trans-04">
+                                <a href="{% url 'user_side:product_page' %}?price_range=2000-2500" class="filter-link stext-106 trans-04">
                                     &#x20B9;2000.00 - &#x20B9;2500.00
                                 </a>
                             </li>
 
                             <li class="p-b-6">
-                                <a href="{% url 'user_side:filtered_products_by_price'  price_range='2500-3000' %}" class="filter-link stext-106 trans-04">
+                                <a href="{% url 'user_side:product_page' %}?price_range=2500-3000" class="filter-link stext-106 trans-04">
                                     &#x20B9;2500.00 - &#x20B9;3000.00
                                 </a>
                             </li>
 
                             <li class="p-b-6">
-                                <a href="{% url 'user_side:filtered_products_by_price'  price_range='3000-10000' %}" class="filter-link stext-106 trans-04">
+                                <a href="{% url 'user_side:product_page' %}?price_range=3000-10000" class="filter-link stext-106 trans-04">
                                     &#x20B9;3000.00+
                                 </a>
                             </li>
@@ -244,9 +250,9 @@
                         </div>
                         {% if  request.user.is_authenticated %}
                         <div class="block2-txt-child2 flex-r p-t-3">
-                            <a href="" class="btn-addwish-b2 dis-block pos-relative ">
-                                <img class="icon-heart1 dis-block trans-04" src="" alt="ICON">
-                                <img class="icon-heart2 dis-block trans-04 ab-t-l" src="" alt="ICON">
+                            <a href="{% url 'wishlist:add_wishlist' product_id=product.product_id %}" class="btn-addwish-b2 dis-block pos-relative ">
+                                <img class="icon-heart1 dis-block trans-04" src="static\user\images\icons\icon-heart-01.png" alt="ICON">
+                                <img class="icon-heart2 dis-block trans-04 ab-t-l" src="static\user\images\icons\icon-heart-02.png" alt="ICON">
                             </a>
                         </div>
                         {% endif %}
