category offer error further checking needed

--- a/templates/admin-side/admindashboard.html
+++ b/templates/admin-side/admindashboard.html
@@ -138,6 +138,8 @@
               </a>
             </li>
 
+
+
             <li class="nav-small-cap">
               <i class="ti ti-dots nav-small-cap-icon fs-4"></i>
               <span class="hide-menu">BRAND MANAGEMENT</span>
@@ -152,6 +154,7 @@
             </li>
 
 
+
             <li class="nav-small-cap">
               <i class="ti ti-dots nav-small-cap-icon fs-4"></i>
               <span class="hide-menu">OFFER AND COUPONS</span>
@@ -164,8 +167,11 @@
                 <span class="hide-menu">Coupons</span>
               </a>
             </li>
+
+
+            
             <li class="sidebar-item">
-              <a class="sidebar-link" href="" aria-expanded="false">
+              <a class="sidebar-link" href="{% url 'category_side:category_offer' %}" aria-expanded="false">
                 <span>
                   <i class="ti ti-mood-happy"></i>
                 </span>
