--- a/templates/user-side/login-user.html
+++ b/templates/user-side/login-user.html
@@ -42,10 +42,11 @@
                   <input type="password" id="typePasswordX" name="password" class="form-control form-control-lg" />
                 </div>
 
-                <p class="small mb-5 pb-lg-2"><a class="text-white-50" href="#!">Forgot password?</a></p>
 
                 <button class="btn btn-outline-light btn-lg px-5" type="submit">Login</button>
               </form>
+
+              <a class="text-white-50" href="{% url 'user_side:forgot_password' %}"><p class="small mb-5 pb-lg-2">Forgot password?</p></a>
 
               <!-- <div class="d-flex justify-content-center text-center mt-4 pt-1">
                 <a href="#!" class="text-white"><i class="fab fa-facebook-f fa-lg"></i></a>
