--- a/templates/user-side/order_confirmed.html
+++ b/templates/user-side/order_confirmed.html
@@ -75,18 +75,18 @@
                     <tfoot>
                       <tr>
                         <th colspan="2" class="text-right">Sub Total:</th>
-                        <th class="text-center">&#x20B9;{{subtotal}} IND</th>
+                        <th class="text-center">&#x20B9;{{subtotal}} INR</th>
                       </tr>
                       <tr>
                         <th colspan="2" class="text-right">Tax:</th>
-                        <th class="text-center">&#x20B9;{{order.tax}} IND</th>
+                        <th class="text-center">&#x20B9;{{order.tax}} INR</th>
                       </tr>
 
                       
 
                       <tr>
                         <th colspan="2" class="text-right">Grand Total:</th>
-                        <th class="text-center">&#x20B9;{{order.order_total}} IND</th>
+                        <th class="text-center">&#x20B9;{{order.order_total}} INR</th>
                       </tr>
                     </tfoot>
                   </table>
